<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tool_bar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnNavSample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_80"
                android:layout_marginEnd="@dimen/margin_20"
                android:text="@string/navSample" />

            <Button
                android:id="@+id/btnActivitiesSample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:text="@string/activiesSample" />

            <Button
                android:id="@+id/btnFragmentsSample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:text="@string/fragmentsSample" />

            <Button
                android:id="@+id/btnMenuSample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:text="@string/menuSample" />

            <Button
                android:id="@+id/btnRecreateActivitySample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:text="@string/recreateActivity" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>